# sox_ng

./: AUTHORS  BUILDING_INTERMEDIATE_VERSIONS.md  BUILD_ANY_VERSION.sh  CMakeLists.txt  ChangeLog  Doxyfile  EXTREME_RESAMPLING_WITH_SOX_A_GUIDE_FOR_THE_PERPLEXED.md  FEATURES.in  FIR_CHANGES_ANALYSIS.md  INSTALL  LARGE_SINC_FILTERS_IMPLEMENTATION.md  Makefile.am  PUBLISHING_GUIDE.md  QUICK_UPDATE_GUIDE.md  README.md  README.osx  README.sh  README.win32  RULES-issues.md  RULES-wiki.md  RULES.md  SOX_DSD_BASICS.md  UPSTREAM_TRACKING.md  configure.ac  flake.nix  libsox_ng.3  local-install  mingwbuild  osxbuild  release.sh  result  result-sox_ng  result-sox_ng-log  screenshot1  sox_ng.1  soxformat_ng.7  soxi_ng.1
.flox/: env.json
libdolbyb/: Calibrate.c  Calibrate.h  DCfilter.c  DCfilter.h  DiodeClip.c  DiodeClip.h  FindOutSmp.c  FindOutSmp.h  HPF1.c  HPF1.h  HPF2.c  HPF2.h  HPF2SetVals.c  HPF2SetVals.h  HPFAdj.c  HPFAdj.h  INSTALL  LPFAdj.c  LPFAdj.h  Makefile.am  Mixers.h  Param.c  Param.h  README  SetGate.c  SetGate.h  SidePath.c  SidePath.h  dolbyb.1  dolbyb.c  dolbyb.h  libdolbyb.3  libdolbyb.c
libgsm/: gsm_create.c  rpe.c
lpc10/: analys.c  lpcini.c  placev.c  voicin.c
m4/: sndfile.m4
msvc10/: .gitignore
msvc9/: .gitignore
scripts/: alert.sh  batch_build_versions.sh  crossfade.sh  crossfade_cat.sh  synth.sh  testcd.sh  testtones.sh  voice-cleanup.sh
src/: .gitignore  8svx.c  CMakeLists.txt  Makefile.am  adpcm.c  adpcms.c  adpcms.h  aifc-fmt.c  aiff.c  alsa.c  amr-nb.c  amr.h  ao.c  au.c  avr.c  bend.c  biquad.c  biquads.c  cdr.c  chorus.c  compand.c  dat.c  (+131 more)
(+41 files in other folders)
